hphp/hack/test/typecheck/shape/shape_structural_subtyping_disallows_indexing_for_unknown_field.php
<?hh // strict

type ShapeWithOptionalField = shape(?'a' => int);

function foo(ShapeWithOptionalField $shape): void {
  $shape['b'];
}
